// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ifRevisionID > can apply revision constraint (inferred from document) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "ifRevisionID": "datrev",
      "set": {
        "rating": 4,
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "title": "@@ -6,5 +6,20 @@
 ard 
-3
+with a Vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;

exports[`ifRevisionID > can apply revision constraint (uppercase) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "ifRevisionID": "abc123",
      "set": {
        "rating": 4,
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "title": "@@ -6,5 +6,20 @@
 ard 
-3
+with a Vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;
